--- a/css/HoriSlideBar.css
+++ b/css/HoriSlideBar.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --black: #000;
     --first-color: #2e2e41;
     --secound-color: #5b85ff;
     --third-color: #434354;
     --text-color: #fff;
-    --neutrals1: #d9d9d9;
-    --accent: #ffb600;
 
     --box-shadow: 0 5px 25px rgb(2, 2, 2, 0.1);
     --text-shadow: 0 5px 25px rgb(2, 2, 2, 0.1);
@@ -31,9 +28,8 @@ section {
     transition: 0.5s ease;
 }
 
-.main-container-scrollBar {
+.main-container {
     position: relative;
-    top: 5%;
 }
 
 .tab-nav-bar {
@@ -53,14 +49,13 @@ section {
 .tab-menu {
     color: var(--text-color);
     list-style: none;
-    /* background: var(--third-color); */
-    background: transparent;
+    background: var(--third-color);
     max-width: 800px;
     padding: 10px;
     white-space: nowrap;
-    /* border-bottom: 1px solid var(--third-color); */
-    /* border-radius: 50px; */
-    /* box-shadow: var(--box-shadow); */
+    border-bottom: 1px solid var(--third-color);
+    border-radius: 50px;
+    box-shadow: var(--box-shadow);
     overflow-x: auto;
     user-select: none;
     scroll-behavior: smooth;
@@ -77,21 +72,14 @@ section {
 }
 
 .tab-btn {
-    color: var(--black);
-    /*old*/
+    color: var(--text-color);
     display: inline-block;
-    /*new*/
-    /* display: inline-flex;
-    justify-content: center;
-    align-items: center; */
-    /**/
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 400;
     margin: 0 2px;
-    /* padding: 3.1px 20px; */
-    padding: 3.1px 20px 3.1px 10px;
+    padding: 10px 20px;
     border-radius: 30px;
-    background: var(--neutrals1);
+    background: var(--first-color);
     cursor: pointer;
     user-select: none;
 }
@@ -100,9 +88,9 @@ section {
     pointer-events: none;
 }
 
-/* .tab-btn.active {
+.tab-btn.active {
     background: var(--secound-color);
-} */
+}
 
 .left, .right {
     position: absolute;
@@ -128,22 +116,10 @@ section {
     border-bottom-right-radius: 30px;
 }
 
-.tab-btn-circle {
-    position: relative;
-    top: 4px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 10px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: #fff;
-}
 
-.tab-btn.active .tab-btn-circle {
-    background: var(--accent);
-}
+
+
+
 
 
 
