--- a/css/hobby-home.css
+++ b/css/hobby-home.css
@@ -1,17 +1,15 @@
 .box {
-    position: absolute;
-    top: 15%;
     max-width: 360px;
     width: 100%;
     /* background: red; */
-
+    
 }
 
 .box .search-box {
     position: relative;
     height: 40px;
     left: 30px;
-    margin-top: 0;
+    margin-top: 0%;
     max-width: 302px;
     /* background: green; */
     /* margin: auto; */
@@ -30,7 +28,6 @@
     padding-right: 40px;
     font-size: 15px;
 }
-
 .search-box .search-icon {
     position: absolute;
     right: 13px;
@@ -44,19 +41,6 @@
     border-radius: 20px;
 }
 
-.background-hobbyHome {
-    position: relative;
-    background-color: var(--basecolor-white);
-    width: 360px;
-    height: 800px;
-    overflow: hidden;
-    text-align: left;
-    font-size: var(--h4-size);
-    font-family: var(--h4);
-    background: #fff;
-}
-
-
 .content-hobby-home {
     background: #000;
     max-width: 360px;
@@ -65,7 +49,6 @@
     height: 616px;
 
 }
-
 .content-hobby-home .text {
     position: absolute;
     color: #fff;
@@ -78,7 +61,7 @@
 }
 
 .content-hobby-home .tag-list {
-    display: flex;
+    display:  flex;
     flex-wrap: wrap;
     margin: 12px 0;
     padding: 40px 0px 5px 10px;
@@ -94,8 +77,7 @@
     font-size: 20px;
     align-items: center;
 }
-
-.content-hobby-home .tag-list li ion-icon {
+.content-hobby-home .tag-list li ion-icon{
     display: block;
     position: relative;
     top: 0;
