--- a/css/tutoringlist.css
+++ b/css/tutoringlist.css
@@ -1,8 +1,6 @@
-.list-frame-tutoring {
+.list-frame {
     position: relative;
-    /* background-color: var(--basecolor-white); */
-    background-color: transparent; /*<-------new*/
-    top: 2%; /*<-----new*/
+    background-color: var(--basecolor-white);
     width: 360px;
     height: 800px;
     overflow: scroll;
@@ -17,7 +15,7 @@
     width: 360px;
     height: 24px;
 }
-.list-inner-tutoring {
+.list-inner {
     position: relative;
     border-radius: 20px;
     background-color: var(--basecolor-white);
@@ -144,7 +142,7 @@
     left: 25px;
 }
 
-.group-date-tutoring {
+.group-date {
     position: absolute;
     display: inline-block;
     height: max-content;
@@ -174,13 +172,12 @@
     font-size: var(--subtitle-1-size);
 }
 
-.tdot-button{
+.tdot-button {
     position: absolute;
-    width: 32px;
-    height: 16px;
-    object-fit: cover;
-    right: 10px;
     top: 10px;
+    right: 10px;
+    width: fit-content;
+    height: fit-content;
     cursor: pointer;
 }
 
@@ -266,8 +263,8 @@
     top: -42px;
 }
 
-.tutoringjoin {
-    display: block;
+.joinbar {
+    display: none;
     position: relative;
     background-color: var(--color-gray);
     width: 360px;
@@ -377,7 +374,7 @@
     
 .list {
     position: relative;
-    top: 0px; /*10px*/
+    top: 10px;
     left: 0px;
     width: 360px;
     height: 300px;
@@ -387,12 +384,4 @@
 {
     margin-bottom: 50px;
 }
-
-/*================NEW==============*/
-.list-111 {
-    width: 360px;
-    height: 350px;
-    background-color:transparent;
-}
-/*=================================*/
 
