--- a/css/hobby.css
+++ b/css/hobby.css
@@ -501,3 +501,8 @@ ellipse-parent.frame-child {
   cursor: pointer;
 }
 /* ----------------------------------------------------------------------------------------- */
+#preview {
+  max-width: 200px;
+  max-height: 200px;
+  z-index: 1;
+}
