--- a/css/hobbyaboutgroup.css
+++ b/css/hobbyaboutgroup.css
@@ -81,18 +81,24 @@
   display: flex;
   justify-content: center;
 }
-
+.FrameImage {
+  position: absolute;
+  top: 96px;
+  left: 64px;
+  border-radius: 10px;
+  outline-style: solid;
+  outline-color: var(--color-black);
+  outline-width: 1.5px;
+  background-color: var(--neutrals1);
+  display: flex;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+}
 .group-picture {
-    position: absolute;
-    top: 96px;
-    left: 64px;
-    border-radius: 10px;
-    outline-style: solid;
-    outline-color: var(--color-black);
-    outline-width: 1.5px;
-    background-color: var(--neutrals1);
-    width: 200px;
-    height: 200px;
+    position: relative;
+    max-width: 200px;
+    max-height: 200px;
 }
 
 .div {
@@ -441,7 +447,7 @@
     position: absolute;
     display: inline-flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: flex-start; /* Change to flex-start to align items to the start */
     outline-style: solid;
     outline-color: var(--color-black);
     outline-width: 1.3px;
@@ -452,15 +458,13 @@
     width: 300px;
     height: 120px;
   }
-
+  
   .div17 {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 5px;
-    left: 5px;
-    margin-right: 5px;
+    margin: 5px; /* Adjust margin to control spacing */
     border-radius: 25px;
     padding-inline: 15px;
     background-color: var(--accent);
@@ -468,6 +472,7 @@
     width: max-content;
     height: 25px;
   }
+  
 
   .frame-inner {
     top: 0;
