--- a/css/grouplist.css
+++ b/css/grouplist.css
@@ -386,3 +386,20 @@
 {
     margin-bottom: 50px;
 }
+
+/*=========================OVERLAY=========================================*/
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 360px;
+    height: 800px;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 1;
+    display: block;
+}
+
+.overlay.active {
+    display: block;
+}
