--- a/css/grouplist.css
+++ b/css/grouplist.css
@@ -130,22 +130,13 @@
 }
 
 .group-profile-picture {
-    position: relative;
-    max-width: 100px;
-    max-height: 100px;
-}
-.imgFrame{
     position: absolute;
     width: 100px;
     height: 100px;
-    overflow: hidden; 
-    display: flex;
-    align-items: center;
     top: 50px;
-    left: 25px;
-    background-color: var(--neutrals1);
-    border-radius: var(--br-5xs);
+    left: 25px
 }
+
 .group-date {
     position: absolute;
     display: inline-block;
