Tutoring-Logo add

--- a/css/home1.css
+++ b/css/home1.css
@@ -68,6 +68,16 @@
   left: 63.5px;
 }
 
+.Tutoringcontent {
+  position: absolute;
+  /* color: var(--basecolor-white); */
+  color: var(--neutrals2);
+  font-weight: bold;
+  font-size: 34px;
+  top: 270px;
+  left: 50px;
+}
+
 .contentselect,
 .Arrow {
   position: absolute;
