--- a/css/Member.css
+++ b/css/Member.css
@@ -1,217 +1,235 @@
-.background {
-    background: linear-gradient(180deg, #f89603, #f86a03 56.25%, #f85b03);
+.list-frame {
+    position: relative;
+    background-color: var(--basecolor-white);
+    width: 360px;
+    height: 800px;
+    overflow: scroll;
+    text-align: left;
+    font-family: var(--subtitle-1);
+    font-size: var(--subtitle-1-size);
+    color: var(--color-black);
+    overflow-x: hidden;
 }
-.container-icon,
-.gesturethreebuttons-icon {
-  position: absolute;
-  height: 5.25%;
-  width: 100%;
-  top: 94.75%;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-  object-fit: cover;
-}
-.container-icon {
-  height: 100%;
-  top: 0;
-}
-.wifi-icon {
-  position: absolute;
-  height: 50%;
-  width: 13.56%;
-  top: 25%;
-  right: 79.66%;
-  left: 6.78%;
-}
-.battery-icon,
-.reception-icon,
-.wifi-icon {
-  bottom: 25%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-  object-fit: cover;
-}
-.reception-icon {
-  position: absolute;
-  height: 50%;
-  width: 10.17%;
-  top: 25%;
-  right: 61.02%;
-  left: 28.81%;
-}
-.battery-icon {
-  height: 54.17%;
-  width: 6.78%;
-  top: 20.83%;
-  right: 42.37%;
-  left: 50.85%;
-}
-.battery-icon,
-.div,
-.time {
-  position: absolute;
-}
-.div {
-  width: 100%;
-  top: 0;
-  left: 0;
-  display: inline-block;
-}
-.time {
-  height: 62.5%;
-  width: 27.97%;
-  top: 20.83%;
-  right: 6.78%;
-  bottom: 16.67%;
-  left: 65.25%;
-  opacity: 0.9;
-  mix-blend-mode: normal;
-}
-.status-bar-contents {
-  position: absolute;
-  height: 100%;
-  width: 32.78%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 67.22%;
-}
-.group-child,
+
 .status-bar {
-  position: absolute;
-  top: 0;
-  left: 0;
+    position: absolute;
+    width: 360px;
+    height: 24px;
 }
-.status-bar {
-  height: 3%;
-  width: 100%;
-  right: 0;
-  bottom: 97%;
+
+.about-group-header {
+    position: relative;
+    top: 0px;
+    left: 0px;
+    background-color: var(--primary);
+    box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.4);
+    width: 360px;
+    height: 110px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
-.group-child {
-  border-radius: 10px;
-  background-color: var(--basecolor-white);
-  width: 293px;
-  height: 562px;
+
+.header-text {
+    position: absolute;
+    display: inline-block;
+    top: 35px;
+    left: 55px;
+    width: 280px;
+    height: 30px;
+    color: var(--neutrals1);
+    text-shadow: 3px 4px 0 rgba(0, 0, 0, 0.3);
+    font-size: var(--h4-size);
+    font-family: "roboto",sans-serif;
 }
-.name-list {
-  margin-block-start: 0;
-  margin-block-end: 8px;
+
+.back-button {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    top: 45px;
+    left: 10px;
 }
-.samzaza-2taleebun-3longtaang-container {
-  position: absolute;
-  top: 0;
-  left: 37px;
+
+.list-inner {
+    position: relative;
+    border-radius: 10px;
+    background-color: var(--basecolor-white);
+    padding-inline: 5px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    outline-style: solid;
+    outline-color: var(--color-black);
+    outline-width: 1.3px;
+    width: 300px;
+    height: auto;
+    min-height: 600px;
+    top: 50px;
+    left: 25px;
+    cursor: default;
+    margin-bottom: 100px;
 }
-.mdicrown-icon {
-  top: 4px;
-  left: 0;
-  width: 24px;
-  height: 24px;
-  overflow: hidden;
-  object-fit: cover;
+
+.list-inner-head {
+    position: relative;
+    border-radius: 20px;
+    padding-inline: 5px;
+    width: calc(100% - 10px);
+    height: 70px;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
 }
-.group-item,
-.mdicrown-icon,
-.me {
-  position: absolute;
+
+.list-inner-body {
+    position: relative;
+    border-radius: 20px;
+    padding-inline: 5px;
+    width: calc(100% - 10px);
+    height: fit-content;
+    top: 0px;
+    left: 0px;
+    padding-bottom: 30px;
+    padding-top: 10px;
 }
-.me {
-  top: 112px;
-  left: 186px;
-  font-size: var(--h6-size);
-  color: var(--success);
+
+.title-group {
+    position: relative;
+    display: inline;
+    width: 300px;
+    height: 70px;
+    justify-content: center;
+    text-align: center;
 }
-.group-item {
-  height: 67.65%;
-  width: 9.3%;
-  top: 3.68%;
-  right: 2.33%;
-  bottom: 28.68%;
-  left: 88.37%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-  object-fit: cover;
+
+.title {
+    position: relative;
+    display: inline;
+    grid-column-end: 3;
+    width: 310px;
+    height: 15px;
+    top: 10px;
+    padding-inline: 5px;
+    font-size: var(--h4-size);
 }
-.b,
-.group-wrapper,
-.samzaza-2taleebun-3longtaang-parent {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 215px;
-  height: 136px;
+
+
+.group-amount {
+    position: absolute;
+    display: none;
+    top: 50px;
+    right: 15px;
+    color: var(--accent);
+    font-size: var(--h6-size);
+    width: max-content;
+    height: max-content;
 }
-.b,
-.group-wrapper {
-  top: 75px;
-  left: 31px;
+
+.group-amount.full {
+    color: var(--error);
 }
-.b {
-  height: 7.12%;
-  width: 32.76%;
-  top: 3.38%;
-  left: 36.52%;
-  font-size: var(--h4-size);
-  display: inline-block;
+
+.group-amount.available {
+    color: var(--success);
 }
-.rectangle-parent {
-  position: absolute;
-  top: 134px;
-  left: 33px;
-  width: 293px;
-  height: 562px;
-  font-size: 24px;
-  color: var(--color-black);
+
+.group-name {
+    position: absolute;
+    display: inline-block;
+    height: max-content;
+    width: max-content;
+    top: 20px;
+    left: 25px;
+    color: var(--color-black);
+    font-family: 'Roboto', sans-serif;
+    font-size: var(--h6-size);
 }
-.tutoring-group-3-child {
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 0 0 var(--br-mini) var(--br-mini);
-  background-color: var(--primary);
-  box-shadow: 3px 5px 0 rgba(0, 0, 0, 0.25);
-  width: 360px;
-  height: 92px;
+
+.leader {
+    position: relative;
+    display: flex;
+    width: 140px;
+    height: 100%;
+    justify-content: left;
+    align-items: center;
+    left: 0;
 }
+
 .member {
-  position: absolute;
-  top: 33px;
-  left: 72px;
-  font-size: var(--h4-size);
-  color: #d9d9d9;
-  display: inline-block;
-  width: 229px;
-  height: 40px;
-  text-shadow: 1px 0 0#d9d9d9, 0 1px 0#d9d9d9, -1px 0 0#d9d9d9, 0-1px 0#d9d9d9;
+    position: relative;
+    display: flex;
+    width: 140px;
+    height: 100%;
+    justify-content: left;
+    align-items: center;
+    left: 0;
 }
-.vector-icon {
-  position: absolute;
-  height: 3.63%;
-  width: 8.33%;
-  top: 4.88%;
-  right: 86.67%;
-  bottom: 91.5%;
-  left: 5%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-  object-fit: cover;
+
+.leader-icon {
+    position: relative;
+    display: inline-block;
+    height: 100%;
+    width: 70px;
+    top: 0px;
+    left: 0px;
+    text-align: center;
 }
-/* .tutoring-group-3 {
-  position: relative;
-  background: linear-gradient(180deg, #f89603, #f86a03 56.25%, #f85b03);
-  width: 100%;
-  height: 800px;
-  overflow: hidden;
-  text-align: left;
-  font-size: var(--font-size-smi);
-  color: rgba(0, 0, 0, 0.6);
-  font-family: var(--h4);
-} */
+
+
+.info-icon {
+    position: relative;
+    display: grid;
+    height: 100%;
+    width: 80px;
+    top: 0px;
+    left: 0px;
+    align-items: center;
+    justify-items: center;
+}
+
+.me-icon {
+    position: relative;
+    display: grid;
+    height: 100%;
+    width: 80px;
+    top: 0px;
+    left: 0px;
+    align-items: center;
+    justify-items: center;
+}
+
+.group {
+  position: absolute;
+  height: 81.63%;
+  width: 96.72%;
+  top: 8.16%;
+  right: 0;
+  bottom: 10.2%;
+  left: 3.28%;
+}
+
+.list-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 30px; 
+    margin-bottom: 5px;
+}
+
+.list-member {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 30px; 
+    margin-bottom: 5px;
+}
+
+.list.padding
+{
+    margin-bottom: 50px;
+}
