--- a/css/grouplist.css
+++ b/css/grouplist.css
@@ -1,4 +1,4 @@
-.list-frame {
+.list-frame-hobby {
     position: relative;
     top: 23%;
     background-color: transparent;
@@ -13,7 +13,7 @@
     scroll-behavior: smooth;
 }
 
-.list-inner {
+.list-inner-hobby {
     position: relative;
     border-radius: 20px;
     background-color: var(--basecolor-white);
@@ -29,7 +29,7 @@
     cursor: default;
 }
 
-.list-inner-head {
+.list-inner-head-hobby {
     position: absolute;
     border-radius: 20px;
     padding-inline: 5px;
@@ -39,7 +39,7 @@
     left: 0px;
 }
 
-.list-inner-body {
+.list-inner-body-hobby {
     position: absolute;
     border-radius: 20px;
     padding-inline: 5px;
@@ -130,22 +130,13 @@
 }
 
 .group-profile-picture {
-    position: relative;
-    max-width: 100px;
-    max-height: 100px;
-}
-.imgFrame{
     position: absolute;
     width: 100px;
     height: 100px;
-    overflow: hidden; 
-    display: flex;
-    align-items: center;
     top: 50px;
-    left: 25px;
-    background-color: var(--neutrals1);
-    border-radius: var(--br-5xs);
+    left: 25px
 }
+
 .group-date {
     position: absolute;
     display: inline-block;
@@ -186,7 +177,7 @@
     font-size: var(--subtitle-1-size);
 }
 
-.tdot-button{
+.tdot-button-hobby {
     position: absolute;
     width: 32px;
     height: 16px;
@@ -196,7 +187,7 @@
     cursor: pointer;
 }
 
-.tpopup {
+.tpopup-hobby {
     position: fixed;
     display: none;
     margin-left: auto;
@@ -209,13 +200,13 @@
     left: 1px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
-    z-index: 2;
+    z-index: 3;
     animation-name: slideup;
     animation-duration: 400ms;
     top: 460px;
 }
 
-.tpopup-drag {
+.tpopup-drag-hobby {
     position: relative;
     background-color: var(--accent);
     border-radius: 5px;
@@ -224,22 +215,22 @@
     top: 20px;
     left: 125px;
     margin-bottom: 40px;
-    z-index: 2;
+    z-index: 3;
 }
 
-.tpopup-option {
+.tpopup-option-hobby {
     position: relative;
     width: 360px;
     height: 30px;
     margin-bottom: 20px;
 }
 
-.tpopup-option:hover {
+.tpopup-option-hobby:hover {
     color: var(--accent);
     cursor: pointer;
 }
 
-.tpopup-option-icon {
+.tpopup-option-icon-hobby {
     position: relative;
     width: 34px;
     height: 30px;
@@ -247,7 +238,7 @@
     left: 40px;
 }
 
-.tpopup-option-text {
+.tpopup-option-text-hobby {
     position: relative;
     display: inline-block;
     width: 120px;
@@ -257,7 +248,7 @@
     font-size: var(--subtitle-1);
 }
 
-.tpopup.on {
+.tpopup-hobby.on {
     display: block;
 }
 
@@ -268,7 +259,7 @@
 @keyframes slidedown {
     from{transform: translateY(-300%);}
 }
-.group-flag-banner {
+.group-flag-banner-hobby {
     position: absolute;
     width: 109px;
     height: 91px;
@@ -277,7 +268,7 @@
     top: -35.6px;
 }
 
-.tutoringjoin {
+.hobbyjoin {
     display: block;
     position: relative;
     background-color: var(--color-gray);
@@ -292,7 +283,7 @@
     from{transform: translateX(300%);}
 }
 
-.join-button {
+.join-button-hobby {
     position: absolute;
     border-radius: 10px;
     background-color: var(--basecolor-white);
@@ -307,11 +298,11 @@
     outline-width: 1.3px;
 }
 
-.join-button:hover {
+.join-button-hobby:hover {
     color: var(--accent);
 }
 
-.member-button {
+.member-button-hobby {
     position: absolute;
     top: 35px;
     left: 140px;
@@ -326,11 +317,11 @@
     outline-width: 1.3px;
 }
 
-.member-button:hover {
+.member-button-hobby:hover {
     color: var(--accent);
 }
 
-.close-button {
+.close-button-hobby {
     position: absolute;
     border-radius: 10px;
     background-color: var(--basecolor-white);
@@ -345,7 +336,7 @@
     outline-width: 1.3px;
 }
 
-.close-button:hover {
+.close-button-hobby:hover {
     color: var(--accent);
 }
   
@@ -383,7 +374,7 @@
   left: 3.28%;
 }
     
-.list {
+.list-hobby {
     position: relative;
     top: 10px;
     left: 0px;
@@ -391,7 +382,24 @@
     height: 300px;
 }
 
-.list.padding
+.list-hobby.padding
 {
     margin-bottom: 50px;
+}
+
+/*=========================OVERLAY=========================================*/
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 360px;
+    height: 800px;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 1;
+    display: block;
+}
+
+.overlay.active {
+    display: block;
 }
